// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / Accordion Default 1`] = `
Array [
  .c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #336BFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  outline: 1px none;
  background-color: transparent;
  padding: 0px 0px 0px 0px;
}

.c0.c0 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c2 {
  font: inherit;
  width: 100%;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background-color: transparent;
  padding: 12px 0;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c3 {
  margin-top: -2px;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  padding-right: 12px;
}

<div
    aria-expanded={false}
    className="c0"
  >
    <h3
      className="Typography__Span-sc-10mju41-0 c1"
    >
      <button
        className="c2"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        type="button"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c1"
        >
          Låg CO₂ risk
        </span>
        <div
          className="c3"
        >
          <svg
            aria-hidden="true"
            className="c4"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 12 12"
          >
            <path
              d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </h3>
  </div>,
  .c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #336BFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  outline: 1px none;
  background-color: transparent;
  padding: 0px 0px 0px 0px;
}

.c0.c0 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c2 {
  font: inherit;
  width: 100%;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background-color: transparent;
  padding: 12px 0;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c3 {
  margin-top: -2px;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  padding-right: 12px;
}

<div
    aria-expanded={false}
    className="c0"
  >
    <h3
      className="Typography__Span-sc-10mju41-0 c1"
    >
      <button
        className="c2"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        type="button"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c1"
        >
          Sustainability score
        </span>
        <div
          className="c3"
        >
          <svg
            aria-hidden="true"
            className="c4"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 12 12"
          >
            <path
              d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </h3>
  </div>,
]
`;

exports[`Storyshots Molecules / Accordion With Footer 1`] = `
Array [
  .c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #336BFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  outline: 1px none;
  background-color: transparent;
  padding: 0px 0px 0px 0px;
}

.c0.c0 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c2 {
  font: inherit;
  width: 100%;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background-color: transparent;
  padding: 12px 0;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c3 {
  margin-top: -2px;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  padding-right: 12px;
}

<div
    aria-expanded={false}
    className="c0"
  >
    <h3
      className="Typography__Span-sc-10mju41-0 c1"
    >
      <button
        className="c2"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        type="button"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c1"
        >
          Låg CO₂ risk
        </span>
        <div
          className="c3"
        >
          <svg
            aria-hidden="true"
            className="c4"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 12 12"
          >
            <path
              d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </h3>
  </div>,
  .c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #336BFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  outline: 1px none;
  background-color: transparent;
  padding: 0px 0px 0px 0px;
}

.c0.c0 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c2 {
  font: inherit;
  width: 100%;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background-color: transparent;
  padding: 12px 0;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c3 {
  margin-top: -2px;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  padding-right: 12px;
}

<div
    aria-expanded={false}
    className="c0"
  >
    <h3
      className="Typography__Span-sc-10mju41-0 c1"
    >
      <button
        className="c2"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        type="button"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c1"
        >
          Sustainability score
        </span>
        <div
          className="c3"
        >
          <svg
            aria-hidden="true"
            className="c4"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 12 12"
          >
            <path
              d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </h3>
  </div>,
  .c0 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

<div
    className="c0"
  />,
  .c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  padding-top: 12px;
}

<div
    className="c0"
  >
    <p
      className="Typography__Span-sc-10mju41-0 c1"
    >
      Did not find what you look for? ...That's a shame. 
    </p>
  </div>,
]
`;
